Added some recent wp content to equity.

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -423,69 +423,88 @@ addtositemap: false
 <!--THIS IS LEARN MORE SECTION-->
 <div class="full-bleed">
   <div class="container py-2">
-<learn-more-section>
-<h3 class="text-center color-purple font-size-2em my-4">Learn More</h3>
-<div class="faq-twitter-wrap pb-5">
-<div class="faq trigger">
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">County playbook to address COVID-19 inequity</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
+    <learn-more-section>
+      <h3 class="text-center color-purple font-size-2em my-4">Learn More</h3>
+      <div class="faq-twitter-wrap pb-5">
+        <div class="faq trigger">
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent" href="#">
+              <h4 class="faq-item-headline">County playbook to address COVID-19 inequity</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
 
-</article>
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Reopening plan that includes the health equity metric</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
+          </article>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/safer-economy/">
+              <h4 class="faq-item-headline">Reopening plan that includes the health equity metric</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
 
 
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Improve completeness of COVID-19 reporting</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent"
+              href=" https://www.lgbtqiahealtheducation.org/what-we-offer/technical-assistance/">
+              <h4 class="faq-item-headline">Improve completeness of COVID-19 reporting</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
 
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Fight discrimination and stigma</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-</div>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/discrimination/">
+              <h4 class="faq-item-headline">Fight discrimination and stigma</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
+        </div>
 
-<div class="faq trigger">
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Business guides to keep employees safe from COVID-19</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
+        <div class="faq trigger">
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent"
+              href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">
+              <h4 class="faq-item-headline">Business guides to keep employees safe from COVID-19</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
 
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Healthy Places Index census tract map</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent" href="https://map.healthyplacesindex.org/">
+              <h4 class="faq-item-headline">Healthy Places Index census tract map</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
 
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Underlying conditions’ link to COVID-19’s severity</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">Manage stress during COVID-19</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-</div>
-</div>
-</learn-more-section>
-</div>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent"
+              href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/people-with-medical-conditions.html">
+              <h4 class="faq-item-headline">Underlying conditions’ link to COVID-19’s severity</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
+          <article class="faq-item trigger">
+            <a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/manage-stress-for-health/">
+              <h4 class="faq-item-headline">Manage stress during COVID-19</h4>
+              <cwds-arrow data-class-prefix="faq"
+                data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue">
+              </cwds-arrow>
+            </a>
+          </article>
+        </div>
+      </div>
+    </learn-more-section>
+  </div>
 </div>
