--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -426,79 +426,35 @@ addtositemap: false
 </div>
 </div>
 
-
-
 <a name="learn-more"></a>
 <!--THIS IS LEARN MORE SECTION-->
 <div class="full-bleed">
   <div class="container py-2">
 <learn-more-section>
-<h3 class="text-center color-purple font-size-2em my-4">Learn More</h3>
-<div class="faq-twitter-wrap pb-5">
-<div class="faq trigger">
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="#">
-<h4 class="faq-item-headline">County playbook to address COVID-19 inequity</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-
-</article>
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/safer-economy/">
-<h4 class="faq-item-headline">Reopening plan that includes the health equity metric</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-
-
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href=" https://www.lgbtqiahealtheducation.org/what-we-offer/technical-assistance/">
-<h4 class="faq-item-headline">Improve completeness of COVID-19 reporting</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/discrimination/">
-<h4 class="faq-item-headline">Fight discrimination and stigma</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
+    <h3 class="text-center color-purple font-size-2em my-4">Learn More</h3>
+    <div class="faq-twitter-wrap pb-5">
+      <div class="faq trigger">
+        <learn-more-links class="d_none">
+          <ul>
+            <li><a data-kind="internal" href="#">County playbook to address COVID-19 inequity</a></li>
+            <li><a data-kind="internal" href="https://covid19.ca.gov/safer-economy/">Reopening plan that includes the health equity metric</a></li>
+            <li><a data-kind="external" href="https://www.lgbtqiahealtheducation.org/what-we-offer/technical-assistance/">Improve completeness of COVID-19 reporting</a></li>
+            <li><a data-kind="internal" href="https://covid19.ca.gov/discrimination/">Fight discrimination and stigma</a></li>
+          </ul>
+        </learn-more-links>
+      </div>
+      <div class="faq trigger">
+        <learn-more-links class="d_none">
+            <li><a data-kind="pdf" href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Business guides to keep employees safe from COVID-19</a></li>
+            <li><a data-kind="external" href="https://map.healthyplacesindex.org/">Healthy Places Index census tract map</a></li>
+            <li><a data-kind="external" href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/people-with-medical-conditions.html">Underlying conditions’ link to COVID-19’s severity</a></li>
+            <li><a data-kind="internal" href="https://covid19.ca.gov/manage-stress-for-health/">Manage stress during COVID-19</a></li>
+          </ul>
+          </learn-more-links>
+      </div>
+    </div>
+  </learn-more-section>
+  </div>
 </div>
-
-<div class="faq trigger">
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">
-<h4 class="faq-item-headline">Business guides to keep employees safe from COVID-19</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://map.healthyplacesindex.org/">
-<h4 class="faq-item-headline">Healthy Places Index census tract map</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/people-with-medical-conditions.html">
-<h4 class="faq-item-headline">Underlying conditions’ link to COVID-19’s severity</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-<article class="faq-item trigger">    
-<a class="faq-item-link cwdsarrow-parent" href="https://covid19.ca.gov/manage-stress-for-health/">
-<h4 class="faq-item-headline">Manage stress during COVID-19</h4>
-<cwds-arrow data-class-prefix="faq" data-class-list="cwdsarrow-size-sm cwdsarrow-idle-orange cwdsarrow-hover-darkblue cwdsarrow-focus-darkblue"></cwds-arrow>
-</a>
-</article>
-</div>
-</div>
-</learn-more-section>
-</div>
-</div>
-
-
 
 <p></p>
