--- a/vi/index.html
+++ b/vi/index.html
@@ -369,20 +369,20 @@
 			<div class="col-lg-8 mx-auto text-center">
 			<h2 class="color-purple mb-0 pb-2">Thank you</h2>
 			<p class="mb-3 text-300">Thank you for doing everything you can to stop the spread of COVID-19 this holiday season.</p>
-				<article class="video-item mx-auto mt-3" data-video="zoqlfZM_Nt4">
-					<a class="video-modal-open video-thumb-link w-100 w-lg-40" data-video="zoqlfZM_Nt4" href="https://youtu.be/zoqlfZM_Nt4">
+				<article class="video-item mx-auto mt-3" data-video="8S5iiKx5dhc">
+					<a class="video-modal-open video-thumb-link w-100 w-lg-40" data-video="8S5iiKx5dhc" href="https://youtu.be/8S5iiKx5dhc">
 						<figure class="video-thumb-photo">
 							<div class="video-thumb-play-button">
 								<svg class="video-thumb-play-button-icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 50 50">
 									<path class="st0" d="M0,45.9V4.4c0-3.3,2-4.2,4.9-2.5l32.9,19c4.7,2.6,4.8,5,0.6,7.5L5,47.6C1.7,49.6,0,48.5,0,45.9z"/>
 								</svg>
 							</div>
-							<img class="video-thumb-photo-img" src="https://files.covid19.ca.gov/img/thankyou.jpg" alt="Thank you">
+							<img class="video-thumb-photo-img" src="https://files.covid19.ca.gov/img/thankyou2.jpg" alt="Thank you">
 						</figure>
 					</a>
 				</article>
 
-				<a href="https://youtu.be/zoqlfZM_Nt4" data-video="zoqlfZM_Nt4" class="link-arrow-blue video-modal-open trigger mt-4" data-video="zoqlfZM_Nt4">
+				<a href="https://youtu.be/8S5iiKx5dhc" data-video="8S5iiKx5dhc" class="link-arrow-blue video-modal-open trigger mt-4" data-video="8S5iiKx5dhc">
 					<div class="link-arrow-label">Watch video</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
