--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">الخط الساخن لفيروس كوفيد-19&nbsp;3:36 م الساعة 24 نوفمبر 2020</p>
+            <p class="small-text">الخط الساخن لفيروس كوفيد-19&nbsp;4:11 م الساعة 24 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -176,6 +176,22 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43411 -->November 24, 2020</small></p>
           <div class="card-text" lang="en-US">Governor to release state’s first Social Innovation Impact Report outlining billions in corporate and philanthropic contributions to support communities across the state SACRAMENTO – Governor Gavin Newsom will join corpo...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-312.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--9ec2e9059045580bcf9a1dbf5f72b24c -->November 23, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-311.aspx" lang="en-US" hreflang="en-US">California Department of Public Health Announces Membership in the Community Vaccine Advisory Committee to Ensure Equity in COVID-19 Vaccine Access</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--63ad9c7cb116572c143ce906a0009755 -->November 22, 2020</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) announced membership in the Community Vaccine Advisory Committee with broad representation from organizations throughout California to provide input into the distr...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
