deploy: 47f75217508616bcbb2eecb5e3bdc587ead99587

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 4:09 PM</p>
+            <p class="small-text">Last updated&nbsp;November 24, 2020 at 6:26 PM</p>
           
         </div>
       </div>
@@ -1750,37 +1750,32 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurants, wineries, and bars</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> Restaurants, wineries, and bars &#8211; updated November 24</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p><strong>Tier status:</strong></p>
 <p>Widespread (purple)</p>
-<ul><li>Restaurants and wineries: Outdoor only with modifications</li><li>Bars, breweries, and distilleries: Closed</li></ul>
+<ul><li>Restaurants: Outdoor only with modifications</li><li>Wineries and tasting rooms: Outdoor only with modifications</li><li>Bars, breweries, and distilleries: Closed</li></ul>
 <p>Substantial (red)</p>
-<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 25% or 100 people, whichever is less</li></ul></li><li>Wineries: Outdoor only with modifications</li><li>Bars, breweries, and distilleries: Closed</li></ul>
+<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 25% or 100 people, whichever is less</li></ul></li><li>Wineries&nbsp;and tasting rooms: Outdoor only with modifications</li><li>Bars, breweries, and distilleries: Closed</li></ul>
 <p>Moderate (orange)</p>
-<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50% or 200 people, whichever is less</li></ul></li><li>Wineries:<ul><li>Indoor with modifications</li><li>Capacity must be limited to 25% or 100 people, whichever is less</li></ul></li><li>Bars, breweries, and distilleries: Outdoor only with modifications</li></ul>
+<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50% or 200 people, whichever is less</li></ul></li><li>Wineries&nbsp;and tasting rooms:<ul><li>Indoor with modifications</li><li>Capacity must be limited to 25% or 100 people, whichever is less</li></ul></li><li>Bars, breweries, and distilleries: Outdoor only with modifications</li></ul>
 <p>Minimal (yellow)</p>
-<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li><li>Wineries:<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50% or 200 people, whichever is less</li></ul></li><li>Bars, breweries, and distilleries:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li></ul>
-<p>Take-out restaurants</p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-take-out-restaurants--en.pdf">guidance for restaurants providing take-out, drive-through, and delivery</a> to create a safer environment for workers and patrons. </li><li>Review the guidance and prepare a plan for your workplace to show customers and employees that you’ve reduced the risk and are open for business.</li></ul>
-<p>Outdoor dining</p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-outdoor-restaurants--en.pdf">guidance for restaurants providing outdoor dining, take-out, drive-through, and delivery</a> to create a safer environment for workers and patrons.</li><li>Review the guidance and prepare a plan for your workplace to show customers and employees that you’ve reduced the risk and are open for business.</li></ul>
-<p>Restaurants, wineries, and bars</p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--en.pdf">guidance for restaurants, wineries, and bars</a> to create a safer environment for workers and patrons.</li><li>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--en.pdf">checklist for restaurants, wineries, and bars</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.&nbsp;</li></ul>
-<p>Dine-in restaurants</p>
-<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-dine-in-restaurants--en.pdf">guidance for dine-in restaurants</a> to create a safer environment for workers and customers.</li><li>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-dine-in-restaurants--en.pdf">checklist for dine-in restaurants</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.</li></ul>
+<ul><li>Restaurants:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li><li>Wineries&nbsp;and tasting rooms:<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50% or 200 people, whichever is less</li></ul></li><li>Bars, breweries, and distilleries:&nbsp;<ul><li>Indoor with modifications</li><li>Capacity must be limited to 50%</li></ul></li></ul>
+<p><strong>Restaurants</strong></p>
+<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--en.pdf">guidance for restaurants</a> to support a safe, clean environment for workers and customers.</li></ul>
+<p><strong>Wineries and tasting rooms</strong></p>
+<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guidance for wineries and tasting rooms</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Establishments that serve meals must follow the guidance for restaurants.&nbsp;</li></ul>
+<p><strong>Bars, breweries, and distilleries</strong></p>
+<ul><li>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guidance for bars, breweries, and distilleries</a> <strong>that do not serve meals</strong> to support a safe, clean environment for workers and customers. Establishments that serve meals must follow the guidance for restaurants.&nbsp;</li></ul>
+<p>Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--en.pdf">checklist for restaurants, wineries, and bars</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
-
-
-
-
 
 
 
@@ -2110,7 +2105,7 @@
 
 
 <!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>
+<script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer="" charset="utf-8"></script>
 
 
 
