--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">الخط الساخن لفيروس كوفيد-19&nbsp;7:27 م الساعة 24 نوفمبر 2020</p>
+            <p class="small-text">الخط الساخن لفيروس كوفيد-19&nbsp;10:48 ص الساعة 25 نوفمبر 2020</p>
           
         </div>
       </div>
