--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Línea de atención de COVID-19&nbsp;24 de noviembre de 2020 a las 7:27 p. m.</p>
+            <p class="small-text">Línea de atención de COVID-19&nbsp;25 de noviembre de 2020 a las 10:48 a. m.</p>
           
         </div>
       </div>
