--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Hotline para sa COVID-19&nbsp;Nobyembre 24, 2020 sa 7:27 PM</p>
+            <p class="small-text">Hotline para sa COVID-19&nbsp;Nobyembre 25, 2020 sa 10:48 AM</p>
           
         </div>
       </div>
