--- a/zh-hant/holidays/index.html
+++ b/zh-hant/holidays/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>節日與COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月19日, 下午3:29</p>
+            <p class="small-text">Last updated&nbsp;2020年11月24日, 下午12:24</p>
           
         </div>
       </div>
@@ -174,15 +174,39 @@
 
 
 
-<p>節日通常意味著與朋友及大家庭聚會、參加派對、舉辦晚宴、旅遊，以及為歷史悠久的習俗進行慶祝。但一些節日活動會促進家庭之間的聚集和互動，這樣會增加COVID-19的傳播風險。</p>
+<p>在此節日季降低您的感染風險，並幫助阻止COVID-19傳播。請遵循加州公共衛生局 (California Department of Public Health, CDPH) 發佈的指引，並規劃更安全的慶祝活動。</p>
 
 
 
-<p>降低假日季風險。請遵循加州公共衛生局 (California Department of Public Health, CDPH) 發佈的指引，並規劃更安全的慶祝活動。</p>
+<p>此頁面包含的內容：</p>
 
 
 
-<h2>有關度過更健康的假日季的建議</h2>
+<ul><li><strong><a href="#thanksgiving">在這個感恩節進行「COVID對話」</a></strong></li><li><strong><a href="#holiday-tips">有關度過更健康的節日季的建議</a></strong></li><li><strong><a href="#travel-advisory">出行建議</a></strong></li><li><strong><a href="#limited">限制性居家避疫令</a></strong></li></ul>
+
+
+
+<h2 id="thanksgiving">在這個感恩節進行「COVID對話」</h2>
+
+
+
+<h3>應做事項：</h3>
+
+
+
+<ul><li>明確態度：對可能增加您或您關心之人的感染風險的一切活動說「不」</li><li>提供備選方案：詢問是否可以用其他方式與家人聯絡。明確表示您想要見他們，並尋找其他方式來分享經歷。</li><li>為年邁的親友及有醫療狀況的親友遞送節日餐食，以便他們可以留在家中</li><li>事先計劃好安全的慶祝活動，然後遵守計劃</li><li>態度誠懇：提醒親友您很關心他們，為了大家的健康著想，需要在今年採取預防措施</li></ul>
+
+
+
+<h3>禁忌事項：</h3>
+
+
+
+<ul><li>與多個家庭規劃慶祝活動</li><li>因某人不想到現場聚會而讓其感到愧疚</li><li>因某人想要採取預防措施而嘲笑該人</li><li>為承擔令您感到擔憂的風險而倍感壓力</li><li>忘記飽含熱情，即使是在拒絕邀請時</li><li>不以電話或虛擬方式與隔離或檢疫中的親友聯絡</li></ul>
+
+
+
+<h2 id="holiday-tips">有關度過更健康的節日季的建議</h2>
 
 
 
@@ -190,7 +214,7 @@
 
 
 
-<ul><li><strong>查看您所在縣的等級情況</strong>，了解根據目前的病毒傳播情況，您所在的縣允許進行哪種類型的活動和聚會。</li><li><strong>在公共場合佩戴口罩</strong>，例如在乘坐公共及大眾交通工具時、參與活動和聚會時、購物和逛商店時，以及周圍有非同住人士的任何地方。</li><li>不僅要在與陌生人相處時<strong>佩戴口罩</strong>，還要在與<strong>非同住人士</strong>（包括密友和家人）相處時佩戴口罩。</li><li><strong>與他人保持距離</strong> — 尤其要與年長的家庭成員和慢性疾病患者保持距離。</li><li>如果您所在的縣明令禁止，則<strong>切勿與其他家庭在室內聚會</strong>。</li><li>如果您所在的縣允許室內聚會，則當在室內聚會時，請<strong>保持門窗打開</strong>，使新鮮空氣循環，並佩戴口罩。</li><li>如果您所在的縣允許室內聚會，請盡量利用所有室內空間；<strong>將物體分散開來</strong>。</li><li><strong>請勿與任何人共用餐具或分享飲品</strong>。 </li><li><strong>盡量保持聚會時間短暫</strong>（無論是在室內還是戶外聚會）。時間越短越安全。</li><li><strong>極力勸阻</strong>COVID-19重症或死亡<strong>高危人士</strong>（例如年長者及有慢性病況的人士）參加任何聚會，尤其是室內聚會。如果您與年長者或有慢性病況的人士聚會，請確保其佩戴外科口罩或N95口罩。</li><li>慶祝節假日的最安全的方式，是與同住人士一同慶祝，但如果您邀請其他人，請<strong>僅邀請最多兩個其他家庭</strong>參加您的聚會。 </li><li>旅遊會增加您感染及傳播該病毒的機率。<strong>從州外進入的旅客在到達後，應先進行14天的自我隔離，</strong>而後才能與其他人在室內相處。 </li><li>經常用肥皂和水<strong>洗手</strong>至少20秒鐘，或使用免洗酒精搓手液。避免觸摸眼睛、鼻子和嘴巴。 </li><li><strong>生病時請留在家中。</strong></li></ul>
+<ul><li><strong>查看<a href="/zh-hant/safer-economy/">您所在縣的等級情況</a></strong>，了解根據目前的病毒傳播情況，您所在的縣允許進行哪種類型的活動和聚會。</li><li><strong>在出門時佩戴口罩</strong>，包括在乘坐公共及大眾交通工具時、參與活動和聚會時、購物和逛商店時，以及周圍有非同住人士的任何地方。</li><li><strong>在附近有非同住人士時佩戴口罩</strong>。</li><li><strong>與他人保持距離</strong> — 尤其要與年長的家庭成員和慢性疾病患者保持距離。</li><li>如果您所在的縣明令禁止，則<strong>切勿與其他家庭在室內聚會</strong>。</li><li>如果您所在的縣允許室內聚會，則當在室內聚會時，請<strong>保持門窗打開</strong>，使新鮮空氣循環，並佩戴口罩。</li><li>如果您所在的縣允許室內聚會，請盡量利用所有空間；<strong>將物體分散開來</strong>。</li><li><strong>請勿與任何人共用餐具或分享飲品</strong>。 </li><li><strong>盡量保持聚會時間短暫</strong>（無論是在室內還是戶外聚會）。時間越短（不超過兩小時）越安全。</li><li><strong>極力勸阻</strong>COVID-19重症或死亡<strong>高危人士</strong>（例如年長者及有慢性病況的人士）參加任何聚會，尤其是室內聚會。如果您與年長者或有慢性病況的人士聚會，請確保其佩戴外科口罩或N95口罩。</li><li>慶祝節假日的最安全的方式，是與同住人士一同慶祝，但如果您邀請其他人，請<strong>僅邀請最多兩個其他家庭</strong>參加您的聚會。 </li><li>旅遊會增加您感染及傳播該病毒的機率。<strong>從州外進入的旅客在到達後，應先進行14天的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/CDPH-Home-Quarantine-Guidance_9-16-2020.pdf">自我隔離</a>，</strong>而後才能與其他人在室內相處。 </li><li>經常用肥皂和水<strong>洗手</strong>至少20秒鐘，或使用免洗酒精搓手液。避免觸摸眼睛、鼻子和嘴巴。 </li><li><strong>生病時請留在家中。</strong></li></ul>
 
 
 
@@ -198,7 +222,7 @@
 
 
 
-<h2>出行建議</h2>
+<h2 id="travel-advisory">出行建議</h2>
 
 
 
@@ -211,6 +235,26 @@
 
 
 <p>如需了解完整細則及規定，請參閱CDPH發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">出行建議</a>。</p>
+
+
+
+<h2 id="limited">限制性居家避疫令</h2>
+
+
+
+<p>CDPH已實行<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">限制性居家避疫令</a>，以降低疾病傳播的機率，同時旨在減少個人待在社區及與非同住人士接觸的時數。值此患病率空前激增之際，每項減少家庭之間接觸的介入措施都至關重要。 </p>
+
+
+
+<p>該限制性命令適用於以下對象：</p>
+
+
+
+<ul><li>處於更安全的經濟藍圖中的廣泛傳播（紫色）等級的所有縣 </li><li>個人必須在晚上10點至第二天凌晨5點之間留在家中，除非其根據該限制性命令獲得豁免</li><li>該限制性命令的有效期為11月21日至12月21日</li></ul>
+
+
+
+<p>如需了解其他細則和規定，請參閱CDPH發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order-qa.aspx">有關限制性居家避疫令的問題與解答</a>。</p>
 </div>
     </div>
   </div>
