--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月24日, 下午7:27</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 上午10:48</p>
           
         </div>
       </div>
