deploy: ad678a7f36a7147c1cccb8aeba3c81c829cbe699

--- a/ar/symptoms-and-risks/index.html
+++ b/ar/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الأعراض والمخاطر</h1>
           
-            <p class="small-text">Last updated&nbsp;6:38 ص الساعة 16 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;9:10 م الساعة 21 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>أعراض فيروس كورونا</h2>
+<h2 id="Coronavirus-symptoms">أعراض فيروس كورونا</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>ما يزيد من خطر إصابتك بالعدوى</h2>
+<h2 id="What-increases-your-risk-of-infection">ما يزيد من خطر إصابتك بالعدوى</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>احتياطات إضافية للمجموعات عالية الخطورة</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">احتياطات إضافية للمجموعات عالية الخطورة</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>كن آمنا من خلال الاستعداد</h2>
+<h2 id="Stay-safe-by-preparing">كن آمنا من خلال الاستعداد</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>أسئلة وإجابات</h3>
+<h2 id="Questions-and-answers">أسئلة وإجابات</h2>
 
 
 
