--- a/es/symptoms-and-risks/index.html
+++ b/es/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Síntomas y riesgos</h1>
           
-            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 6:38 a. m.</p>
+            <p class="small-text">Last updated&nbsp;21 de noviembre de 2020 a las 9:10 p. m.</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>Síntomas del coronavirus</h2>
+<h2 id="Coronavirus-symptoms">Síntomas del coronavirus</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>Qué aumenta su riesgo de infección</h2>
+<h2 id="What-increases-your-risk-of-infection">Qué aumenta su riesgo de infección</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>Precauciones adicionales para grupos de alto riesgo</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">Precauciones adicionales para grupos de alto riesgo</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>Manténgase seguro preparándose</h2>
+<h2 id="Stay-safe-by-preparing">Manténgase seguro preparándose</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>Preguntas y respuestas</h3>
+<h2 id="Questions-and-answers">Preguntas y respuestas</h2>
 
 
 
