--- a/ko/symptoms-and-risks/index.html
+++ b/ko/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>증상 및 위험</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오전 6:38</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 21일 오후 9:10</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>코로나바이러스 증상</h2>
+<h2 id="Coronavirus-symptoms">코로나바이러스 증상</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>감염 위험을 증가시키는 요인</h2>
+<h2 id="What-increases-your-risk-of-infection">감염 위험을 증가시키는 요인</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>고위험군을 위한 추가 예방책</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">고위험군을 위한 추가 예방책</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>안전하게 지내도록 대비하기</h2>
+<h2 id="Stay-safe-by-preparing">안전하게 지내도록 대비하기</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>질문 및 응답</h3>
+<h2 id="Questions-and-answers">질문 및 응답</h2>
 
 
 
