--- a/vi/symptoms-and-risks/index.html
+++ b/vi/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Triệu chứng và rủi ro</h1>
           
-            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 6:38</p>
+            <p class="small-text">Last updated&nbsp;21 tháng 11, 2020 lúc 21:10</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>Triệu chứng nhiễm vi-rút corona</h2>
+<h2 id="Coronavirus-symptoms">Triệu chứng nhiễm vi-rút corona</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>Điều gì làm tăng nguy cơ nhiễm bệnh của quý vị</h2>
+<h2 id="What-increases-your-risk-of-infection">Điều gì làm tăng nguy cơ nhiễm bệnh của quý vị</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>Các biện pháp phòng ngừa bổ sung cho các nhóm nguy cơ cao</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">Các biện pháp phòng ngừa bổ sung cho các nhóm nguy cơ cao</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>Giữ an toàn bằng cách chuẩn bị</h2>
+<h2 id="Stay-safe-by-preparing">Giữ an toàn bằng cách chuẩn bị</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>Hỏi và đáp</h3>
+<h2 id="Questions-and-answers">Hỏi và đáp</h2>
 
 
 
