--- a/tl/symptoms-and-risks/index.html
+++ b/tl/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga sintomas at panganib</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 6:38 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 21, 2020 sa 9:10 PM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>Mga sintomas ng coronavirus</h2>
+<h2 id="Coronavirus-symptoms">Mga sintomas ng coronavirus</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>Ang nagpapalaki sa posibilidad mong mahawahan</h2>
+<h2 id="What-increases-your-risk-of-infection">Ang nagpapalaki sa posibilidad mong mahawahan</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>Mga karagdagang pag-iingat para sa mga grupong may malaking posibilidad na magkasakit</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">Mga karagdagang pag-iingat para sa mga grupong may malaking posibilidad na magkasakit</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>Manatiling ligtas sa pamamagitan ng pagiging handa</h2>
+<h2 id="Stay-safe-by-preparing">Manatiling ligtas sa pamamagitan ng pagiging handa</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>Mga tanong at sagot</h3>
+<h2 id="Questions-and-answers">Mga tanong at sagot</h2>
 
 
 
