--- a/zh-hans/symptoms-and-risks/index.html
+++ b/zh-hans/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>症状与风险</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 上午6:38</p>
+            <p class="small-text">Last updated&nbsp;2020年11月21日, 下午9:10</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>新型冠状病毒症状</h2>
+<h2 id="Coronavirus-symptoms">新型冠状病毒症状</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>哪些情况下会增加感染风险</h2>
+<h2 id="What-increases-your-risk-of-infection">哪些情况下会增加感染风险</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>高风险人群应采取的额外预防措施</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">高风险人群应采取的额外预防措施</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>做好准备以保持安全</h2>
+<h2 id="Stay-safe-by-preparing">做好准备以保持安全</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>问题与解答</h3>
+<h2 id="Questions-and-answers">问题与解答</h2>
 
 
 
