deploy: 99e05e18028d6c3da9a5bc7d8a8edbcb0fe58b9e

--- a/ar/contact-tracing/index.html
+++ b/ar/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>تتبع المخالطين</h1>
           
-            <p class="small-text">Last updated&nbsp;1:37 م الساعة 18 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:38 ص الساعة 24 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -398,7 +398,7 @@
 
 
 
-<p>إذا كنت مهاجرًا، فيمكنك الحصول على المساعدة في <a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">الدليل التوجيهي لسكان كاليفورنيا من المهاجرين (PDF)</a>.</p>
+<p>إذا كنت مهاجرًا، فيمكنك الحصول على المساعدة في <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">الدليل التوجيهي لسكان كاليفورنيا من المهاجرين (PDF)</a>.</p>
 
 
 
