--- a/ko/contact-tracing/index.html
+++ b/ko/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>접촉자 추적</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 18일 오후 1:37</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 24일 오전 4:38</p>
           
         </div>
       </div>
@@ -398,7 +398,7 @@
 
 
 
-<p>이민자인 경우 <a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아 이민자를 위한 지침(PDF)</a>에서 도움을 확인할 수 있습니다.</p>
+<p>이민자인 경우 <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아 이민자를 위한 지침(PDF)</a>에서 도움을 확인할 수 있습니다.</p>
 
 
 
