--- a/tl/contact-tracing/index.html
+++ b/tl/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 18, 2020 sa 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 24, 2020 sa 4:38 AM</p>
           
         </div>
       </div>
@@ -398,7 +398,7 @@
 
 
 
-<p>Kung isa kang immigrant, makakahanap ka ng tulong sa <a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay para sa mga Immigrant na Californian (PDF)</a>.</p>
+<p>Kung isa kang immigrant, makakahanap ka ng tulong sa <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay para sa mga Immigrant na Californian (PDF)</a>.</p>
 
 
 
