--- a/es/contact-tracing/index.html
+++ b/es/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Rastreo de contactos</h1>
           
-            <p class="small-text">Last updated&nbsp;18 de noviembre de 2020 a las 1:37 p. m.</p>
+            <p class="small-text">Last updated&nbsp;24 de noviembre de 2020 a las 4:38 a. m.</p>
           
         </div>
       </div>
@@ -398,7 +398,7 @@
 
 
 
-<p>Si es inmigrante, puede encontrar ayuda en la <a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía para los californianos inmigrantes (PDF)</a>.</p>
+<p>Si es inmigrante, puede encontrar ayuda en la <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía para los californianos inmigrantes (PDF)</a>.</p>
 
 
 
