--- a/zh-hans/contact-tracing/index.html
+++ b/zh-hans/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>接触者追踪</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月18日, 下午1:37</p>
+            <p class="small-text">Last updated&nbsp;2020年11月24日, 上午4:38</p>
           
         </div>
       </div>
@@ -398,7 +398,7 @@
 
 
 
-<p>如果您是移民，您可以在<a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指引 (PDF)</a> 中找到帮助。</p>
+<p>如果您是移民，您可以在<a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指引 (PDF)</a> 中找到帮助。</p>
 
 
 
