deploy: 61d1cf69c3a7af924fb44f1a29ffa350049122b2

--- a/ar/treatment-for-covid-19/index.html
+++ b/ar/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>العلاج</h1>
           
-            <p class="small-text">Last updated&nbsp;6:29 ص الساعة 14 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;11:42 ص الساعة 23 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>منع العدوى </li><li>تدابير الرقابة</li><li>الرعاية الداعمة، وتشمل ما يلي:<ul><li> الأكسجين التكميلي</li><li> الدعم بالتهوية الميكانيكية </li></ul></li></ul>
-
-
-
-<p>وافقت إدارة الغذاء والدواء الأمريكية (FDA) على عقار واحد وهو ريمديسيفير (Veklury)، لعلاج كوفيد-19 في حالات معينة.</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>نعم. أصدرت إدارة الغذاء والدواء (FDA) ترخيص الاستخدام في حالات الطوارئ لعقار ضد وحيد النسيلة Bamlanivimab، الذي يقتصر على علاج:</p>
+<p>نعم. أصدرت إدارة الغذاء والدواء (FDA) ترخيص الاستخدام في حالات الطوارئ لعقاقير الأجسام المضادة وحيدة النسيلة:</p>
+<ul><li>Bamlanivimab،</li><li>وCasirivimab، وimdevimab، وهذه الأدوية توصف معًا</li></ul>
+<p>وهذه الأدوية مصرح بها لعلاج:</p>
 <ul><li>المرضى غير المقيمين بالمستشفى المصابين بفيروس كوفيد-19 الخفيف أو المعتدل.</li><li>المرضى البالغين والأطفال الذين تبلغ أعمارهم 12 عامًا أو أكبر ويزنون 88 رطلًا على الأقل. </li><li>المرضى المعرضين بدرجة عالية لخطر التطور إلى كوفيد-19 الشديد أو الإقامة بالمستشفى للعلاج. وهذا يشمل أولئك البالغة أعمارهم 65 عامًا أو أكثر، أو الذين يعانون من بعض الحالات الطبية المزمنة.</li></ul>
-<p>ويقوم مقدمو الرعاية الصحية بإعطاء Bamlanivimab كجرعة وحيدة عن طريق الوريد.</p>
-<p>ولا يصرح باستخدام Bamlanivimab في مرضى كوفيد-19 الذين:</p>
-<ul><li>تم إدخالهم المستشفى للإقامة والعلاج</li><li>تتطلب حالتهم العلاج بالأكسجين</li><li>تتطلب حالتهم زيادة في تدفق الأكسجين الأساسي بسبب ظروف غير معروفة ولا ترتبط بكوفيد-19</li></ul>
-<p>يجب على المرضى الذين عولجوا بعقار bamlanivimab الاستمرار في:</p>
+<p>ويقوم مقدمو الرعاية الصحية بإعطاء هذه العقاقير كجرعة وحيدة عن طريق الوريد.</p>
+<p>ولا يصرح باستخدام هذه العقاقير لعلاج مرضى كوفيد-19 الذين:</p>
+<ul><li>تم إدخالهم المستشفى للإقامة والعلاج</li><li>تتطلب حالتهم العلاج بالأكسجين</li><li>تتطلب حالتهم زيادة في تدفق الأكسجين الأساسي بسبب ظروف غير معروفة ولا ترتبط بفيروس كوفيد-19</li></ul>
+<p>يجب على المرضى الذين عولجوا بهذه العقاقير الاستمرار في:</p>
 <ul><li>العزلة الذاتية</li><li>ارتداء القناع </li><li>التباعد الاجتماعي </li><li>تجنب مشاركة الأغراض الشخصية </li><li>التنظيف والتطهير للأسطح التي تُلمس كثيرًا وباستمرار</li><li>غسل أيديهم بشكل متكرر</li></ul>
 <p>لمعرفة المزيد من المعلومات، اطلع على</p>
-<ul><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">ضد وحيد النسيلة لعلاج كوفيد-19</a></li><li>منظمة الغذاء والدواء: <a href="https://www.fda.gov/media/143605/download">أسئلة شائعة بشأن ترخيص الاستخدام في حالات الطوارئ بالنسبة لعقار Bamlanivimab</a></li></ul>
+<ul><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">عقار الأجسام المضادة وحيدة النسيلة Bamlanivimab لعلاج مرضى كوفيد-19</a></li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">عقارا الأجسام المضادة وحيدة النسيلة Casirivimab وImdevimab لعلاج مرضى كوفيد-19</a></li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/media/143605/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقار Bamlanivimab</a> </li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/media/143894/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقاري Casirivimab وImdevimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
