--- a/es/treatment-for-covid-19/index.html
+++ b/es/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tratamiento</h1>
           
-            <p class="small-text">Last updated&nbsp;14 de noviembre de 2020 a las 6:29 a. m.</p>
+            <p class="small-text">Last updated&nbsp;23 de noviembre de 2020 a las 11:42 a. m.</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>prevención de infecciones </li><li>medidas de control</li><li>atención de apoyo, que incluye:<ul><li> oxígeno suplementario</li><li> soporte mecánico de ventilador </li></ul></li></ul>
-
-
-
-<p>La Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA) aprobado un medicamento, remdesivir (Veklury), para el tratamiento de la COVID-19 en determinadas situaciones.</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Sí. La FDA emitió una EUA para el fármaco de anticuerpos monoclonales bamlanivimab, limitado al tratamiento de:</p>
+<p>Sí. La FDA ha emitido dos EUA para medicamentos de anticuerpos monoclonales:</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab e imdevimab, administrados juntos</li></ul>
+<p>Están autorizados para:</p>
 <ul><li>Pacientes no hospitalizados con COVID-19 leve o moderada.</li><li>Pacientes adultos y pediátricos de 12 años de edad o más que pesen al menos 88 libras. </li><li>Pacientes con alto riesgo de evolucionar a COVID-19 grave u hospitalización. Esto incluye a aquellos que tienen 65 años de edad o más, o que tienen ciertas afecciones médicas crónicas.</li></ul>
-<p>Los proveedores de atención médica administran bamlanivimab en una sola dosis por vía intravenosa.</p>
-<p>Bamlanivimab no está autorizado para su uso en pacientes con COVID-19 que:</p>
-<ul><li>Están hospitalizados.</li><li>Necesitan terapia de oxígeno.</li><li>Necesitan un aumento en el flujo de oxígeno de referencia debido a afecciones subyacentes no relacionadas con la COVID-19.</li></ul>
-<p>Los pacientes tratados con bamlanivimab deben continuar haciendo lo siguiente:</p>
+<p>Los proveedores de atención médica administran los medicamentos en una sola dosis por vía intravenosa.</p>
+<p>Estos medicamentos no están autorizados para su uso en pacientes con COVID-19 que requieran:</p>
+<ul><li>hospitalización</li><li>terapia de oxígeno</li><li>un aumento en el flujo de oxígeno de referencia debido a afecciones subyacentes no relacionadas con la COVID-19</li></ul>
+<p>Los pacientes tratados con estos medicamentos deben continuar haciendo lo siguiente:</p>
 <ul><li>autoaislarse</li><li>usar mascarilla </li><li>practicar el distanciamiento social </li><li>evitar compartir artículos personales </li><li>limpiar y desinfectar las superficies que se tocan con gran frecuencia </li><li>lavarse las manos con frecuencia</li></ul>
 <p>Para obtener más información, consulte</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Anticuerpo monoclonal para el tratamiento de COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Preguntas frecuentes sobre la autorización de uso de emergencia de bamlanivimab</a></li></ul>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Anticuerpo monoclonal bamlanivimab para el tratamiento de la COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Anticuerpos monoclonales casirivimab e imdevimab para el tratamiento de la COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Preguntas frecuentes sobre la autorización de uso de emergencia de bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Preguntas frecuentes sobre la autorización de uso de emergencia de casirivimab + imdevimab</a> </li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
