--- a/tl/treatment-for-covid-19/index.html
+++ b/tl/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Paggamot</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 14, 2020 sa 6:29 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 23, 2020 sa 11:42 AM</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>Pag-iwas sa impeksyon </li><li>Mga pag-iingat para sa pagkontrol</li><li>Pansuportang pangangalaga, kasama ang:<ul><li> Karagdagang oxygen</li><li> Suporta sa mechanical na bentilasyon </li></ul></li></ul>
-
-
-
-<p>May naaprubahan na ang Pangasiwaan para sa Pagkain at Gamot ng U.S. (Food and Drug Administration, FDA) na isang gamot, ang remdesivir (Veklury), para sa paggamot ng COVID-19 sa ilang partikular na sitwasyon.</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Oo. Naglabas ang FDA ng EUA para sa monoclonal antibody drug bamlanivimab, limitado sa paggamot ng:</p>
+<p>Oo. Naglabas ang FDA ng dalawang EUA para sa mga monoclonal antibody na gamot:</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab at imdevimab, na magkasamang ibinibigay</li></ul>
+<p>Ang mga pahintulot ay para sa:</p>
 <ul><li>Mga hindi naospital na pasyenteng may mild o moderate na COVID-19.</li><li>Mga adult at pediatric na pasyenteng 12 taong gulang pataas at may timbang na hindi bababa sa 88 pounds. </li><li>Mga pasyenteng may mataas na panganib na magkaroon ng malubhang COVID-19 o maospital. Kasama rito ang mga 65 taong gulang pataas, o iyong may ilang partikular na pabalik-balik na medikal na kondisyon.</li></ul>
-<p>Ang Bamlanivimab ay pinangangasiwaan ng mga provider ng pangangalagang pangkalusugan nang isang dosis sa ilalim ng balat.</p>
-<p>Ang Bamlanivimab ay hindi pinapahintulutang gamitin sa mga pasyenteng may COVID-19 na:</p>
-<ul><li>Naospital</li><li>Kailangan ng oxygen therapy</li><li>Kailangan ng pagdagdag ng baseline na daloy ng oxygen dahil sa mga kasalukuyang kondisyon na hindi nauugnay sa COVID-19</li></ul>
-<p>Ang mga pasyenteng ginagamot gamit ang bamlanivimab ay dapat patuloy na:</p>
+<p>Ang mga gamot ay pinangangasiwaan ng mga provider ng pangangalagang pangkalusugan nang isang dosis sa ilalim ng balat.</p>
+<p>Hindi awtorisado ang mga gamot na ito para sa paggamit sa mga pasyenteng may COVID-19 na nangangailangan ng:</p>
+<ul><li>Pagpapaospital</li><li>Oxygen therapy</li><li>Dagdag na baseline na daloy ng oxygen dahil sa mga kasalukuyang kondisyon na hindi nauugnay sa COVID-19</li></ul>
+<p>Ang mga pasyenteng ginagamot gamit ang mga gamot na ito ay dapat patuloy na:</p>
 <ul><li>Mag-isolate</li><li>Magsuot ng mask </li><li>Magpanatili ng distansya sa ibang tao </li><li>Hindi magpagamit sa iba ng personal na gamit </li><li>Linisin at i-disinfect ang mga surface na "madalas hawakan"</li><li>Madalas na maghugas ng kamay</li></ul>
 <p>Para sa higit pang impormasyon, tingnan ang</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody para sa Paggamot ng COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Mga Madalas Itanong Tungkol sa Awtorisasyon sa Emergency na Paggamit ng Bamlanivimab</a></li></ul>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody na Bamlanivimab para sa Paggamot ng COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibody na Casirivimab at Imdevimab para sa Paggamot ng COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Mga Madalas Itanong Tungkol sa Awtorisasyon sa Emergency na Paggamit ng Bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Mga Madalas Itanong Tungkol sa Awtorisasyon sa Emergency na Paggamit ng Casirivimab + Imdevimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
