--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">Last updated&nbsp;11:59 ص الساعة 25 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;12:03 م الساعة 25 نوفمبر 2020</p>
           
         </div>
       </div>
