--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;25 de noviembre de 2020 a las 11:59 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;25 de noviembre de 2020 a las 12:03 p. m.</p>
           
         </div>
       </div>
