--- a/ko/treatment-for-covid-19/index.html
+++ b/ko/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>치료</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 14일 오전 6:29</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 23일 오전 11:42</p>
           
         </div>
       </div>
@@ -187,11 +187,7 @@
 
 
 
-<ul><li>감염 예방 </li><li>관리 대책</li><li>다음을 포함하는 지지적 치료:<ul><li> 보충용 산소</li><li> 기계적 환기 지원 </li></ul></li></ul>
-
-
-
-<p>미국 식품의약국(Food and Drug Administration, FDA)은 특정한 상황에서 COVID-19를 치료할 목적으로 렘데시비르(Veklury)라는 약을 승인하였습니다.</p>
+<ul><li>감염 예방 </li><li>관리 대책</li><li>다음을 포함하는 지지적 치료:<ul><li> 보충용 산소</li><li> 기계적 환기 장치 지원 </li></ul></li></ul>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>있습니다. FDA는 단일 클론성 항체 의약품인 밤라니비맙(Bamlanivimab)에 대한 EUA를 다음 치료에 한해 발표하였습니다:</p>
+<p>그렇습니다. FDA는 단일 클론성 항체 의약품에 대해 두 건의 EUA를 빌표하였습니다:</p>
+<ul><li>밤라미비맙(Bamlanivimab)</li><li>카시리비맙(Casirivimab)과 임데비맙(imdevimab), 동시 투여</li></ul>
+<p>승인된 사용 목적은 다음과 같습니다:</p>
 <ul><li>가볍거나 중간 정도의 COVID-19 증상을 보이는 비입원 환자.</li><li>성인 및 최소 88 파운드 체중의 만 12세 이상 소아 환자. </li><li>중증의 COVID-19 또는 입원 상태로 진행될 위험이 높은 환자. 여기에는 65세 이상의 연령자 또는 특정 만성 질환자가 해당됩니다.</li></ul>
-<p>밤라니비맙은 의료 제공자가 정맥 주사로 일회 분량을 투여합니다.</p>
-<p>다음 COVID-19 환자에 대한 밤라니비맙 사용은 승인되지 않았습니다:</p>
-<ul><li>입원 중인 경우</li><li>산소 치료법을 요하는 경우</li><li>비 COVID-19 관련 기저 질환으로 인해 기준 산소 주입량을 늘려야 하는 경우</li></ul>
-<p>밤라니비맙 치료 대상 환자들은 다음 사항을 계속 이행해야 합니다:</p>
+<p>해당 약물은 의료 제공자가 정맥 주사로 일회 분량을 투여합니다.</p>
+<p>이 약품은 다음을 요하는 COVID-19 환자 대상으로는 그 사용이 승인되지 않았습니다:</p>
+<ul><li>입원</li><li>산소 치료</li><li>비 COVID-19 관련 기저 질환으로 인한 기준 산소 주입량 확대</li></ul>
+<p>해당 약물 치료 대상 환자들은 다음 사항을 계속 이행해야 합니다:</p>
 <ul><li>자가 격리</li><li>마스크 착용 </li><li>사회적 거리두기 </li><li>개인 물품 공유 자제 </li><li>"자주 만지는" 표면 세정 및 소독 </li><li>손 자주 씻기</li></ul>
 <p>더 자세한 사항은 다음을 참조하십시오</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">COVID-19 치료를 위한 단일 항체(Monoclonal Antibody for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">밤라니비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab)</a></li></ul>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">COVID-19 치료를 위한 단일 항체 밤라미비맙(Monoclonal Antibody Bamlanivimab for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">COVID-19 치료를 위한 단일 항체 카시리비맙과 임데비맙(Monoclonal Antibodies Casirivimab and  Imdevimab for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">밤라니비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab)</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">카시리비맙 + 임데비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Casirivimab + Imdevimab)</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
