--- a/vi/treatment-for-covid-19/index.html
+++ b/vi/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Điều trị</h1>
           
-            <p class="small-text">Last updated&nbsp;14 tháng 11, 2020 lúc 6:29</p>
+            <p class="small-text">Last updated&nbsp;23 tháng 11, 2020 lúc 11:42</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>Phòng ngừa lây nhiễm </li><li>Các biện pháp kiểm soát</li><li>Chăm sóc hỗ trợ, bao gồm:<ul><li> Oxy bổ sung</li><li> Hỗ trợ thở máy </li></ul></li></ul>
-
-
-
-<p>Cục Quản Lý Thực Phẩm và Dược Phẩm (Food and Drug Administration, FDA) Hoa Kỳ đã phê duyệt một loại thuốc là remdesivir (Veklury) để điều trị bệnh COVID-19 trong một số trường hợp cụ thể.</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Có. FDA đã ban hành EUA cho một loại thuốc kháng thể đơn liều bamlanivimab, chỉ giới hạn để điều trị:</p>
+<p>Có. FDA đã ban hành hai EUA cho thuốc kháng thể đơn liều:</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab và imdevimab, được tiêm đồng thời</li></ul>
+<p>Giấy Phép được sử dụng cho:</p>
 <ul><li>Các bệnh nhân không phải nhập viện bị nhiễm COVID-19 ở mức độ nhẹ hoặc trung bình.</li><li>Các bệnh nhân là người lớn hoặc trẻ em từ 12 tuổi trở lên có mức cân nặng ít nhất 88 pound. </li><li>Các bệnh nhân có nguy cơ cao sẽ tiến triển bệnh COVID-19 sang mức độ nặng hoặc nhập viện. Nhóm này bao gồm cả những người từ 65 tuổi trở lên hoặc có một số bệnh trạng mãn tính cụ thể.</li></ul>
-<p>Các nhà cung cấp dịch vụ chăm sóc sức khỏe cho dùng bamlanivimab như thuốc tiêm đơn liều.</p>
-<p>Không được phép sử dụng bamlanivimab cho các bệnh nhân mắc COVID-19:</p>
-<ul><li>Nhập viện</li><li>Cần liệu pháp oxy</li><li>Cần tăng dòng oxy cơ sở do các bệnh trạng nền không liên quan đến COVID-19</li></ul>
-<p>Các bệnh nhân được điều trị bằng bamlanivimab cần tiếp tục:</p>
+<p>Các nhà cung cấp dịch vụ chăm sóc sức khỏe tiêm các loại thuốc này như thuốc tiêm đơn liều.</p>
+<p>Các loại thuốc này không được phép sử dụng cho những bệnh nhân COVID-19 cần:</p>
+<ul><li>Nhập viện</li><li>Liệu pháp oxy</li><li>Tăng dòng oxy cơ sở do các bệnh trạng nền không liên quan đến COVID-19</li></ul>
+<p>Các bệnh nhân được điều trị bằng các loại thuốc này cần tiếp tục:</p>
 <ul><li>Tự cách ly</li><li>Đeo khẩu trang </li><li>Thực hiện giãn cách xã hội </li><li>Tránh dùng chung vật dụng cá nhân </li><li>Vệ sinh và khử trùng các bề mặt "thường xuyên tiếp xúc" </li><li>Rửa tay thường xuyên</li></ul>
 <p>Để biết thêm thông tin, hãy xem</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Kháng Thể Đơn Liều để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab</a></li></ul>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Kháng Thể Đơn Liều Bamlanivimab để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Các Kháng Thể Đơn Liều Casirivimab và Imdevimab để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Casirivimab + Imdevimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
