--- a/zh-hans/data-and-tools/index.html
+++ b/zh-hans/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>数据及工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月25日, 上午11:59</p>
+            <p class="small-text">Last updated&nbsp;2020年11月25日, 下午12:03</p>
           
         </div>
       </div>
