--- a/zh-hans/treatment-for-covid-19/index.html
+++ b/zh-hans/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治疗</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月14日, 上午6:29</p>
+            <p class="small-text">Last updated&nbsp;2020年11月23日, 上午11:42</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>感染预防 </li><li>控制措施</li><li>支持性护理，包括：<ul><li> 补充供氧</li><li> 机械辅助呼吸 </li></ul></li></ul>
-
-
-
-<p>美国食品药品监督管理局 (Food and Drug Administration, FDA) 已核准一种药物可以在特定情况下用于COVID-19治疗，即瑞德西韦 (Veklury)。</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>有。FDA发布了单克隆抗体药物bamlanivimab EUA，仅限用于治疗以下人士：</p>
+<p>有。FDA为单克隆抗体药物发布了两项EUA：</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab和imdevimab，一起给药</li></ul>
+<p>授权将药物用于以下人士：</p>
 <ul><li>有轻度或中度COVID-19症状的非住院患者。</li><li>体重至少达88磅的12岁及以上成人及儿童患者。 </li><li>有较高风险发展为COVID-19重症或住院的患者。其中包括65岁或以上人士，或有特定慢性病况的人士。</li></ul>
-<p>Bamlanivimab的施用方式是由医疗保健提供者进行单剂量静脉给药。</p>
-<p>尚未批准将Bamlanivimab用于治疗以下COVID-19患者：</p>
-<ul><li>住院患者</li><li>需要氧气治疗的患者</li><li>因有潜在的非COVID-19相关状况而需要增加基础氧气流量的患者</li></ul>
-<p>使用bamlanivimab进行治疗的患者应该持续进行以下事项：</p>
+<p>这些药物的施用方式是由医疗保健提供者进行单剂量静脉给药。</p>
+<p>未授权将这些药物用于需要以下治疗的COVID-19患者：</p>
+<ul><li>住院治疗</li><li>氧气治疗</li><li>因有潜在的非COVID-19相关状况而需要增加基础氧气流量</li></ul>
+<p>使用这些药物进行治疗的患者应该持续进行以下事项：</p>
 <ul><li>自我隔离</li><li>佩戴口罩 </li><li>保持社交距离 </li><li>避免共用个人物品 </li><li>对“经常接触”的表面进行清洁和消毒 </li><li>勤洗手</li></ul>
 <p>如需更多信息，请参阅</p>
-<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用于治疗COVID-19的单克隆抗体</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有关Bamlanivimab紧急使用授权的常见问题与解答</a></li></ul>
+<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用于治疗COVID-19的单克隆抗体Bamlanivimab</a></li><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用于治疗COVID-19的单克隆抗体Casirivimab和Imdevimab</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有关Bamlanivimab紧急使用授权的常见问题与解答</a> </li><li>FDA：<a href="https://www.fda.gov/media/143894/download">有关Casirivimab + Imdevimab紧急使用授权的常见问题与解答</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
