--- a/zh-hant/treatment-for-covid-19/index.html
+++ b/zh-hant/treatment-for-covid-19/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治療</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月14日, 上午6:29</p>
+            <p class="small-text">Last updated&nbsp;2020年11月23日, 上午11:42</p>
           
         </div>
       </div>
@@ -188,10 +188,6 @@
 
 
 <ul><li>感染預防</li><li>控制措施</li><li>支援性護理，包括：<ul><li> 補充供氧</li><li> 機械輔助呼吸 </li></ul></li></ul>
-
-
-
-<p>美國食品藥品監督管理局 (Food and Drug Administration, FDA) 已核准一種藥物可以在特定情況下用於COVID-19治療，即瑞德西韋 (Veklury)。</p>
 
 
 
@@ -326,20 +322,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>有。FDA發佈了單克隆抗體藥物bamlanivimab EUA，僅限用於治療以下人士：</p>
+<p>有。FDA為單克隆抗體藥物發佈了兩項EUA：</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab和imdevimab，一起給藥</li></ul>
+<p>授權將藥物用於以下人士：</p>
 <ul><li>有輕度或中度COVID-19症狀的非住院患者。</li><li>體重至少達88磅的12歲及以上成人及兒童患者。 </li><li>有較高風險發展為COVID-19重症或住院的患者。其中包括65歲或以上人士，或有特定慢性病況的人士。</li></ul>
-<p>Bamlanivimab的施用方式是由醫療保健提供者進行单剂量靜脈給藥。</p>
-<p>尚未批准將Bamlanivimab用於治療以下COVID-19患者：</p>
-<ul><li>住院患者</li><li>需要氧氣治療的患者</li><li>因有潛在的非COVID-19相關狀況而需要增加基礎氧氣流量的患者</li></ul>
-<p>使用bamlanivimab進行治療的患者應該持續進行以下事項：</p>
+<p>藥物的施用方式是由醫療保健提供者進行单剂量靜脈給藥。</p>
+<p>未授權將這些藥物用於需要以下治療的COVID-19患者：</p>
+<ul><li>住院治療</li><li>氧氣治療</li><li>因有潛在的非COVID-19相關狀況而需要增加基礎氧氣流量</li></ul>
+<p>使用這些藥物進行治療的患者應該持續進行以下事項：</p>
 <ul><li>自我隔離</li><li>佩戴口罩 </li><li>保持社交距離 </li><li>避免共用個人物品 </li><li>對「經常接觸」的表面進行清潔和消毒 </li><li>勤洗手</li></ul>
 <p>如需更多資訊，請參閱</p>
-<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用於治療COVID-19的單克隆抗體</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有關Bamlanivimab緊急使用授權的常見問題與解答</a></li></ul>
+<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用於治療COVID-19的單克隆抗體Bamlanivimab</a></li><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用於治療COVID-19的單克隆抗體Casirivimab和Imdevimab</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有關Bamlanivimab緊急使用授權的常見問題與解答</a> </li><li>FDA：<a href="https://www.fda.gov/media/143894/download">有關Casirivimab + Imdevimab緊急使用授權的常見問題與解答</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
