deploy: 7c531ae828b75707c38af1b727968bcc90c49960

--- a/ar/stay-home-except-for-essential-needs/index.html
+++ b/ar/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>حول قيود  كوفيد-19.</h1>
           
-            <p class="small-text">Last updated&nbsp;2:14 م الساعة 23 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;8:59 ص الساعة 23 نوفمبر 2020</p>
           
         </div>
       </div>
