--- a/get-local-information/index.html
+++ b/get-local-information/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Local info and alerts</h1>
           
-            <p class="small-text">Last updated&nbsp;November 5, 2020 at 9:58 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:00 PM</p>
           
         </div>
       </div>
@@ -179,7 +179,7 @@
 
 
 
-<a class="action-link" href="https://covid19.ca.gov/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span> Sign up for county alerts</a></p>
+<a class="action-link" href="https://covid19.ca.gov/sign-up-for-county-alerts/"><span class="ca-gov-icon-warning-circle"></span><strong> Sign up for county alerts</strong></a>
 
 
 
