deploy: b28a78b567f631fb12535ff17ff5608379eeac40

--- a/get-financial-help/index.html
+++ b/get-financial-help/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Get financial help</h1>
           
-            <p class="small-text">Last updated&nbsp;October 5, 2020 at 10:54 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:25 PM</p>
           
         </div>
       </div>
@@ -352,7 +352,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://dbo.ca.gov/file-a-complaint/">File a complaint</a> with the Department of Business Oversight</li><li>Call DBO’s Consumer Services Office at <a href="tel:1-866-275-2677" data-type="tel" data-id="tel:1-866-275-2677">(866) 275-2677</a> or <a href="tel:1-916-327-7585" data-type="tel" data-id="tel:1-916-327-7585">(916) 327-7585</a> </li><li>Or email <a href="mailto:Ask.DBO@dbo.ca.gov">Ask.DBO@dbo.ca.gov</a></li></ul>
+<ul><li><a href="https://dbo.ca.gov/file-a-complaint/">File a complaint</a> with the Department of Business Oversight</li><li>Call DBO’s Consumer Services Office at <a href="tel:1-866-275-2677" data-type="tel" data-id="tel:1-866-275-2677">(866) 275-2677</a> or <a href="tel:1-916-327-7585" data-type="tel" data-id="tel:1-916-327-7585">(916) 327-7585</a>&nbsp;</li><li>Or email <a href="mailto:Ask.DBO@dbo.ca.gov">Ask.DBO@dbo.ca.gov</a></li></ul>
 
       </div>
     </div>
