--- a/education/index.html
+++ b/education/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 11:47 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:24 PM</p>
           
         </div>
       </div>
