--- a/help-for-seniors/index.html
+++ b/help-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;October 16, 2020 at 8:02 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:26 PM</p>
           
         </div>
       </div>
