--- a/housing-and-homelessness/index.html
+++ b/housing-and-homelessness/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing and homelessness</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 7:48 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:24 PM</p>
           
         </div>
       </div>
