--- a/manage-stress-for-health/index.html
+++ b/manage-stress-for-health/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Manage stress for health</h1>
           
-            <p class="small-text">Last updated&nbsp;October 22, 2020 at 10:52 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:19 PM</p>
           
         </div>
       </div>
