--- a/resources-for-emotional-support-and-well-being/index.html
+++ b/resources-for-emotional-support-and-well-being/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Resources for emotional support and well-being</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 11:36 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:26 PM</p>
           
         </div>
       </div>
@@ -273,7 +273,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">Fire/EMS<strong> </strong>helpline</a>: Call <a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a> to find 24/7 support for a variety of behavioral health issues for firefighters.</li><li><a href="https://www.copline.org/">COPLINE</a>: Call <a href="tel:800-267-5463">800-267-5463</a> to find support 24/7 for law enforcement officers.</li></ul>
+<ul><li><a href="https://www.nvfc.org/phfd/" data-type="URL" data-id="https://www.nvfc.org/phfd/">Fire/EMS<strong>&nbsp;</strong>helpline</a>: Call&nbsp;<a href="tel:888-275-6832" data-type="tel" data-id="tel:888-275-6832">888-275-6832</a>&nbsp;to find 24/7 support for a variety of behavioral health issues for firefighters.</li><li><a href="https://www.copline.org/">COPLINE</a>: Call&nbsp;<a href="tel:800-267-5463">800-267-5463</a>&nbsp;to find support 24/7 for law enforcement officers.</li></ul>
 
       </div>
     </div>
