--- a/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 4:01 PM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:25 PM</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 <!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script>
+<script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer="" charset="utf-8"></script>
 </div>
     </div>
   </div>
