--- a/taxes/index.html
+++ b/taxes/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;October 30, 2020 at 9:13 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:22 PM</p>
           
         </div>
       </div>
