--- a/translate/index.html
+++ b/translate/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Translate this website</h1>
           
-            <p class="small-text">Last updated&nbsp;October 14, 2020 at 11:48 AM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:22 PM</p>
           
         </div>
       </div>
