--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;August 21, 2020 at 4:42 PM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:48 PM</p>
           
         </div>
       </div>
@@ -220,7 +220,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>No. Lodging for traveling healthcare providers should be accounted for in their contract through a stipend or in their hourly rate. The “Hotels rooms for healthcare workers” program shouldn’t be used to pay for those costs. </p>
+<p>No. Lodging for traveling healthcare providers should be accounted for in their contract through a stipend or in their hourly rate. The “Hotels rooms for healthcare workers” program shouldn’t be used to pay for those costs.&nbsp;</p>
 <p>Traveling healthcare workers can access discounts provided by the program, but need to pay for the room on their own.</p>
 
       </div>
