--- a/telehealth/index.html
+++ b/telehealth/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Getting health care from home through telehealth</h1>
           
-            <p class="small-text">Last updated&nbsp;June 18, 2020 at 1:22 PM</p>
+            <p class="small-text">Last updated&nbsp;November 25, 2020 at 4:50 PM</p>
           
         </div>
       </div>
@@ -231,7 +231,7 @@
 
 
 
-<ul><li>For private health plans, call the state Department of Managed Health Care’s Help Center at <a href="tel:1-888-466-2219">1-888-466-2219</a>. </li><li>For Medi-Cal, call the state Department of Health Care Service’s Help Center at <a href="tel:1-800-541-5555">1-800-541-5555</a>.</li></ul>
+<ul><li>For private health plans, call the state Department of Managed Health Care’s Help Center at <a href="tel:1-888-466-2219">1-888-466-2219</a>.&nbsp;</li><li>For Medi-Cal, call the state Department of Health Care Service’s Help Center at <a href="tel:1-800-541-5555">1-800-541-5555</a>.</li></ul>
 
 
 
