deploy: d52e85d53e9554f88a4b53320a612026af6ed9d8

--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">Last updated&nbsp;7:02 م الساعة 25 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;10:48 ص الساعة 26 نوفمبر 2020</p>
           
         </div>
       </div>
