--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;November 25, 2020 at 7:02 PM</p>
+            <p class="small-text">Last updated&nbsp;November 26, 2020 at 10:48 AM</p>
           
         </div>
       </div>
